adding the js for release

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -54,6 +54,19 @@ $('#payment-form').submit(function(event){
     Stripe.createToken(form, stripeResponseHandler);
     return false;
   });
+  
+ function stripeResponseHandler(status, response) {
+   var form = $('#payment-form');
+   if (response.error) {
+     form.find('.payment_errors').text(response.error.message);
+     form.find('button').prop.('disabled', false);
+   }else {
+     var token = response.id;
+     form.append($('<input type="hidden" name="stripeToken">').val(token));
+     form.get(0).submit();
+   }
+ }
+ 
 </script>
 
 
