--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -44,32 +44,35 @@
 
 
 <script type="text/javascript">
-$(function({
   Stripe.setPublishableKey('<%=Rails.configuration.stripe[:publishable_key]%>');
-  });
-  
-$('#payment-form').submit(function(event){
-    var form = $(this);
-    form.find('button').prop('disabled', true);
-    Stripe.createToken(form, stripeResponseHandler);
-    return false;
-  });
-  
- function stripeResponseHandler(status, response) {
-   var form = $('#payment-form');
+ var stripeResponseHandler = function(status, response) {
+   var $form = $('#payment-form');
    if (response.error) {
-     form.find('.payment_errors').text(response.error.message);
-     form.find('button').prop.('disabled', false);
-   }else {
-     var token = response.id;
-     form.append($('<input type="hidden" name="stripeToken">').val(token));
-     form.get(0).submit();
-   }
- }
+      $form.find('.payment_errors').text(response.error.message);
+      $form.find('button').prop('disabled', false);
+    } else {
+      var token = response.id;
+      $form.append($('<input type="hidden" name="stripeToken"/>').val(token));
+      $form.get(0).submit();
+    }
+  };
+  
+  jQuery(function($) {
+    $('#payment-form').submit(function(e) {
+      var $form = $(this);
+      $form.find('button').prop('disabled', true);
+      Stripe.createToken($form, stripeResponseHandler);
+      
+      return false;
+      
+      
+    });
+  });
+
+ </script>
  
-</script>
 
-
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 
 
