--- a/app/views/payments/new_old.html.erb
+++ b/app/views/payments/new_old.html.erb
@@ -17,4 +17,28 @@
     <% end %>
 
 
-    
+    <script type="text/javascript">
+    $(function({
+      Stripe.setPublishableKey('<%=Rails.configuration.stripe[:publishable_key]%>');
+      });
+
+    $('#payment-form').submit(function(event){
+        var form = $(this);
+        form.find('button').prop('disabled', true);
+        Stripe.createToken(form, stripeResponseHandler);
+        return false;
+      });
+
+     function stripeResponseHandler(status, response) {
+       var form = $('#payment-form');
+       if (response.error) {
+         form.find('.payment_errors').text(response.error.message);
+         form.find('button').prop.('disabled', false);
+       } else {
+         var token = response.id;
+         form.append($('<input type="hidden" name="stripeToken"/>').val(token));
+         form.get(0).submit();
+       }
+     }
+
+    </script>
