--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
       <th>Description</th>
       <th>Price</th>
       <th>User</th>
-      <th></th>
+      <th>ID</th>
       <th></th>
       <th></th>
     </tr>
@@ -22,6 +22,7 @@
         <td><%= product.description %></td>
         <td><%= product.price %></td>
         <td><%= product.user %></td>
+        <td><%= product.id %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
