--- a/app/views/payments/new2.html.erb
+++ b/app/views/payments/new2.html.erb
@@ -39,41 +39,19 @@
         </div><!-- end of style div> -->  
     </div> <!-- end of row div> -->
     <% end %>
-  </div>  <!-- end of well div> -->
-  
+  </div>  <!-- end of well div> --> 
+
+
   <script type="text/javascript">
-   $(function(){
-  Stripe.setPublishableKey('<%=Rails.configuration.stripe[:publishable_key]%>');
-   });
-   </script>
-   
-   
-     <script>
+  $(function({
+ Stripe.setPublishableKey('<%=Rails.configuration.stripe[:publishable_key]%>');
+  });
+  </script>
 
-      $('#payment-form').submit(function(event) {
-      var form = $(this);
-      form.find('button').prop('disabled', true);
-      Stripe.createToken(form, stripeResponseHandler);
-      return false;
-      });
 
-      </script>
-      
-   <script type="text/javascript">
-
-    function stripeResponseHandler(status, response) {
-    var form = $('#payment-form');
-    if (response.error) {
-    form.find('.payment-errors').text(response.error.message);
-    form.find('button').prop('disabled', false);
-    } else {
-    var token = response.id;
-    form.append($('<input type="hidden" name="stripeToken">').val(token));
-    form.get(0).submit();
-    }
-    }
-    </script>
-    
-    
    
-   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+
+
+          
