--- a/app/views/payments/new_old.html.erb
+++ b/app/views/payments/new_old.html.erb
@@ -92,4 +92,38 @@
       });
 
      </script>
+     
+     
+     
+     
+       <script>
+
+       $('#payment-form').submit(function(event) {
+       var form = $(this);
+       form.find('button').prop('disabled', true);
+       Stripe.createToken(form, stripeResponseHandler);
+       return false;
+       });
+
+       </script>
+
+
+       <script type="text/javascript">
+
+       function stripeResponseHandler(status, response) {
+       var form = $('#payment-form');
+       if (response.error) {
+       form.find('.payment-errors').text(response.error.message);
+       form.find('button').prop('disabled', false);
+       } else {
+       var token = response.id;
+       form.append($('<input type="hidden" name="stripeToken">').val(token));
+       form.get(0).submit();
+       }
+       }
+       </script>
+
+
+   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
     
