--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -31,7 +31,30 @@
       <% end %>
       </table>
       
-
+<table>
+  <thead>
+    <tr>
+      <th>Timestamp</th>
+      <th>Event</th>
+      <th>Changes</th>
+      </tr>
+      </thead>
+      
+      <tbody>
+      <%  @sale.versions.each do |version| %>
+        <tr>
+          <td><%= version.created_at %></td>
+          <td><%= version.event 5%> </td>
+          <td> <% version.changeset.sort.each do |key, value| %>
+            <b><%= key %></b>: <%= value[0] %> to <%= value[1] %> <br>
+            <% end %>
+            </td>
+            </tr>
+            <% end %>
+            </tbody>
+            </table>
+            
+          
 <%= link_to 'Edit', edit_sale_path(@sale) %> |
 <%= link_to 'Back To Sales list', sales_path %>|
 <%= link_to 'Stripe', "https://manage.stripe.com/payments/#{@sale.stripe_id}" %>
