fixing credit image and css for displayig form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,11 @@
  *= require_self
  *= require_tree .
  */
+
+#card_image {
+height: 30px; 
+padding-left: 7px; 
+margin-top:-10px;
+display:inline;
+	
+}
